admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
      - name: admin-server
        image: springcommunity/spring-petclinic-admin-server
        ports:
        - containerPort: 9090
        resources:
          limits:
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9090
          initialDelaySeconds: 40
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  namespace: petclinic
spec:
  type: NodePort  # Để truy cập từ bên ngoài
  selector:
    app: admin-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090  # Port truy cập từ bên ngoài
