k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: springcommunity/spring-petclinic-config-server
          ports:
            - containerPort: 8888
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: petclinic
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: springcommunity/spring-petclinic-discovery-server
          ports:
            - containerPort: 8761
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: petclinic
spec:
  selector:
    app: discovery-server
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: springcommunity/spring-petclinic-customers-service
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: petclinic
spec:
  selector:
    app: customers-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - name: visits-service
          image: springcommunity/spring-petclinic-visits-service
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: petclinic
spec:
  selector:
    app: visits-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: springcommunity/spring-petclinic-vets-service
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  namespace: petclinic
spec:
  selector:
    app: vets-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: springcommunity/spring-petclinic-api-gateway
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: petclinic
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
        - name: tracing-server
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9411
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: tracing-server
  namespace: petclinic
spec:
  selector:
    app: tracing-server
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
      nodePort: 31411 # Optional: Expose externally
  type: LoadBalancer # Or NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - name: admin-server
          image: springcommunity/spring-petclinic-admin-server
          ports:
            - containerPort: 9090
          resources:
            limits:
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  namespace: petclinic
spec:
  selector:
    app: admin-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090 # Optional: Expose externally
  type: LoadBalancer # Or NodePort
