tracing-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-server
  namespace: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
      - name: tracing-server
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
        resources:
          limits:
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: tracing-server
  namespace: petclinic
spec:
  selector:
    app: tracing-server
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
